--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ html, body {
     text-align: justify;
 }
 
+img{
+    width: 100%;
+}
+
 #cover{
     height: 100%;
     background-position: center center;
@@ -35,6 +39,13 @@ h2{
     margin: 100px 0 50px 0;
 }
 
+h3{
+    margin: 0;
+    font-size: 17px;
+    color: #434242;
+    line-height: 1.5;
+}
+
 p{
     font-size: 1.3125rem;
     margin: 0;
@@ -48,7 +59,7 @@ hr{
     margin: 100px auto 0 auto;
 }
 
-br{
+p>br{
     line-height: 50px;
 }
 
@@ -62,10 +73,6 @@ br{
     margin-bottom: 100px;
 }
 
-.img-contain img{
-    width: 100%;
-}
-
 .img-contain .img-say{
     font-size: 1.0625rem;
     color: gray;
@@ -77,9 +84,83 @@ br{
     margin-bottom: 100px;
 }
 
+.people-contain{
+    margin-top: 50px;   
+    margin-bottom: 50px;
+    padding: 0 50px;
+}
+
 .share-block{
     margin-top: 100px;
+    height: 40px;
 }
+
+.fb-like-block{
+    float: left;
+}
+
+.line-block{
+    float: left;
+    margin-left: 5px;
+    margin-top: 1px;
+}
+
+.line-block img{
+    width: initial;
+}
+
+.logo-block{
+    float: right;
+    margin-top: -25px;
+}
+
+.udn-logo{
+    width: 140px;
+    display: inline-block;
+}
+
+.nmd-logo{
+    width: 140px;
+    display: inline-block;
+}
+
+.fb-comment-block{
+    margin-top: 50px;
+}
+
+#editor{
+    font-size: 1.0625rem;
+    color: gray;
+    margin-top: 50px;
+}
+
+#report{
+    margin-top: 50px;
+}
+
+#report .col-sm-3{
+    padding: 0 10px;
+}
+
+#report p{
+    font-size: 1rem;
+}
+
+#report a {
+    color: #000000;
+    text-decoration: none;
+}
+
+#report img:hover{
+    opacity: .5;
+    transition: opacity .2s ease;
+}
+
+#report a:hover { 
+    text-decoration: underline;
+}
+    
+
 
 @media screen and (max-width: 768px){
     .container{
