--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 html, body {
-	height: 100%;
     font-size: 16px;
     line-height: 1.5;
     font-family: Arial, "微軟正黑體", sans-serif;
@@ -12,7 +11,7 @@ img{
 }
 
 #cover{
-    height: 100%;
+    height: 100vh;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -188,6 +187,24 @@ p>br{
 #report .col-sm-3 img{
     width: 208px;
     height: 146px;
+}
+
+#indicator{
+	height: 10px;
+	top: 0;
+	left: 0;
+	position: fixed;
+	width: 100%;
+	z-index: 9999;
+	opacity: 0;
+    transition: opacity 0.7s ease;
+	background-color: #FFFFFF;
+}
+
+#indicator-bar{
+	height: 10px;
+	width: 0;
+	background-color: #AA4444;
 }
 
 @media screen and (max-width: 768px){
