--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,11 @@ p>br{
 }
 
 footer{
-    margin-top: 100px;
+    width: 880px;
+    margin: 80px auto 0 auto;
+    padding-top: 20px;
+    border-top: 1px solid #DCDDDD;
+    border-top-width: 80%;
     display: flex;
     justify-content: center;
     padding-bottom: 50px;
@@ -85,7 +89,7 @@ footer a {
 }
 
 .footer-right-board{
-    border-right: 1px solid #000000;
+    border-right: 1px solid #A3A3A3;
 }
 
 #head{
@@ -293,6 +297,7 @@ blockquote::after{
     h2{
         font-size: 26px;
         text-align: left;
+        margin: 80px 0 25px 0;
     }
 
     h3{
@@ -306,6 +311,10 @@ blockquote::after{
 
     p>br{
         line-height: 10px;
+    }
+
+    hr{
+        margin: 80px auto 0 auto;
     }
 
     blockquote{
@@ -329,7 +338,9 @@ blockquote::after{
     }
 
     #editor{
+        width: calc(100% - 40px);
         font-size: 16px;
+        padding: 0 0 50px 0;
     }
 
     .container{
@@ -366,6 +377,11 @@ blockquote::after{
         clear: both;
     }
 
+    .people-contain img{
+        width: 100%;
+        height: auto;
+    }
+
     #report p {
         font-size: 16px;
         float: left;
@@ -380,6 +396,19 @@ blockquote::after{
         width: 50%;
         padding-left: 10px;
         padding-bottom: 10px;
+    }
+
+    #share-block-top{
+        margin-top: 20px;
+    }
+
+    footer{
+        width: calc(100% - 40px);
+        margin-top: 30px;
+    }
+
+    .footer-link{
+        font-size: 14px;
     }
 
 }
