--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ html, body {
     font-family: Arial, "微軟正黑體", sans-serif;
     word-wrap: break-word;
     text-align: justify;
+    height: 100%;
 }
 
 img{
