--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ blockquote::after{
     }
 
     .container{
-        width: calc(100% - 40px);
+        width: 100%;
         padding: 0;
     }
 
@@ -357,6 +357,10 @@ blockquote::after{
         height: 46px;
         line-height: 46px;
         text-align: center;
+    }
+
+    .content{
+        padding: 0 20px;
     }
 
     .img-contain .img-say{
