--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ blockquote{
     font-size: 32px;
     color: #888888;
     padding: 0;
-    margin: 50px 0 0 0;
+    margin: 50px 0 50px 0;
     border-left: none;
 }
 
