--- a/css/style.css
+++ b/css/style.css
@@ -490,7 +490,11 @@ footer a {
 		width: 0;
 		background-color: #FFB93E;
 		transition: width 0.6s linear;
-	}
+    }
+    .quote-contain{
+        font-size: 26px;
+        color: #888888;
+    }
 
 }
 
