--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,11 @@ footer a {
     margin-top: 10px;
 }
 
+#carousel{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
 @media screen and (max-width: 767px){
 
     h1{
@@ -496,6 +501,11 @@ footer a {
         color: #888888;
     }
 
+    #carousel{
+        margin-top: 64px;
+        margin-bottom: 64px;
+    }
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px){
@@ -638,6 +648,11 @@ footer a {
 		width: 0;
 		background-color: #FFB93E;
 		transition: width 0.6s linear;
+    }
+
+    #carousel{
+        margin-top: 64px;
+        margin-bottom: 64px;
     }
 
 }
